Updated collarID and collarResp to be Partition and Sort Key
